# mxl

./: CMakeLists.txt  README.md  compile_commands.json  flow.json  flow2.json  vcpkg.json
.devcontainer/: Dockerfile  Dockerfile.amazonlinux
.devcontainer/scripts/common/libfabric/: install.sh
.github/ISSUE_TEMPLATE/: feature.yml  small_improvement.yml
.github/workflows/: backports.yml  build.yml  link_requirement.yml
GOVERNANCE/: GOVERNANCE.md  Release Process.md
cmake/modules/: Findpicojson.cmake
docs/: Tools.md
lib/: CMakeLists.txt
lib/fabrics/: CMakeLists.txt  README.md
lib/fabrics/include/mxl/: fabrics.h
lib/fabrics/ofi/: CMakeLists.txt
lib/fabrics/ofi/cmake/: libmxl-fabrics.pc.in
lib/fabrics/ofi/src/: fabrics.cpp
lib/fabrics/ofi/src/internal/: Address.cpp  Address.hpp  AddressVector.cpp  AddressVector.hpp  AudioBounceBuffer.cpp  AudioBounceBuffer.hpp  Base64.hpp  BounceBuffer.cpp  BounceBuffer.hpp  BounceBufferContinuous.cpp  BounceBufferContinuous.hpp  BounceBufferDiscrete.cpp  BounceBufferDiscrete.hpp  BouncingBuffer.cpp  BouncingBuffer.hpp  Completion.cpp  Completion.hpp  CompletionQueue.cpp  CompletionQueue.hpp  CompletionQueueEntry.cpp  CompletionQueueEntry.hpp  DataLayout.cpp  DataLayout.hpp  Domain.cpp  Domain.hpp  Endpoint.cpp  Endpoint.hpp  Event.cpp  Event.hpp  EventQueue.cpp  EventQueue.hpp  EventQueueEntry.cpp  EventQueueEntry.hpp  Exception.cpp  Exception.hpp  FIInfo.cpp  FIInfo.hpp  FILogging.cpp  FILogging.hpp  FIVersion.cpp  (+46 more)
lib/fabrics/rdma-core/: CMakeLists.txt
lib/fabrics/rdma-core/src/: fabrics.cpp
lib/fabrics/rdma-core/src/internal/: Address.cpp  Address.hpp  CommunicationManager.hpp  CompletionChannel.cpp  CompletionChannel.hpp  CompletionQueue.cpp  CompletionQueue.hpp  ConnectionManagement.cpp  ConnectionManagement.hpp  Endpoint.cpp  Endpoint.hpp  EventChannel.cpp  EventChannel.hpp  Exception.cpp  Exception.hpp  FabricsInstance.cpp  FabricsInstance.hpp  Initiator.cpp  Initiator.hpp  LocalRegion.cpp  LocalRegion.hpp  MemoryRegion.cpp  MemoryRegion.hpp  ProtectionDomain.cpp  ProtectionDomain.hpp  QueueHelpers.hpp  QueuePair.cpp  QueuePair.hpp  RCInitiator.cpp  RCInitiator.hpp  RCTarget.cpp  RCTarget.hpp  Region.cpp  Region.hpp  RegisteredRegion.cpp  RegisteredRegion.hpp  RemoteRegion.cpp  RemoteRegion.hpp  Target.cpp  Target.hpp  (+3 more)
lib/fabrics/src/: fabrics.cpp
lib/fabrics/src/internal/: MemoryRegion.cpp  MemoryRegion.hpp
lib/include/mxl/: fabrics.h  flow.h  mxl.h
lib/internal/: CMakeLists.txt
lib/internal/include/mxl-internal/: DiscreteFlowWriter.hpp  DomainWatcher.hpp  FlowOptionsParser.hpp  FlowParser.hpp  FlowWriter.hpp  Instance.hpp  PosixFlowIoFactory.hpp  SharedMemory.hpp
lib/internal/src/: DomainWatcher.cpp  FlowManager.cpp  FlowParser.cpp  FlowReader.cpp  Instance.cpp  PosixContinuousFlowReader.cpp  PosixContinuousFlowReader.hpp  PosixContinuousFlowWriter.cpp  PosixContinuousFlowWriter.hpp  PosixDiscreteFlowReader.cpp  PosixDiscreteFlowReader.hpp  PosixDiscreteFlowWriter.cpp  PosixDiscreteFlowWriter.hpp  PosixFlowIoFactory.cpp  SharedMemory.cpp
lib/internal/tests/: test_domainwatcher.cpp  test_options.cpp
lib/src/: flow.cpp  mxl.cpp
lib/src/internal/: CMakeLists.txt  ContinuousFlowData.hpp  ContinuousFlowReader.hpp  DiscreteFlowData.hpp  DiscreteFlowReader.hpp  DiscreteFlowWriter.hpp  FlowData.cpp  FlowData.hpp  FlowReader.hpp  FlowWriter.hpp  Instance.cpp  Instance.hpp  PosixContinuousFlowReader.cpp  PosixContinuousFlowReader.hpp  PosixContinuousFlowWriter.cpp  PosixContinuousFlowWriter.hpp  PosixDiscreteFlowReader.cpp  PosixDiscreteFlowReader.hpp  PosixDiscreteFlowWriter.cpp  PosixDiscreteFlowWriter.hpp  SharedMemory.cpp
lib/tests/: CMakeLists.txt  test_flows.cpp  test_pkgconfig_c_link.sh
lib/tests/fabrics/: CMakeLists.txt  test_basics.cpp
lib/tests/fabrics/ofi/: CMakeLists.txt  Util.hpp  test_Address.cpp  test_Connection.cpp  test_Domain.cpp  test_Provider.cpp  test_Region.cpp  test_TargetInfo.cpp
rust/: .gitignore  Cargo.toml
rust/gst-mxl-rs/src/mxlsrc/: mxl_helper.rs
rust/mxl/: Cargo.toml
rust/mxl-sys/: Cargo.toml  build.rs  wrapper-fabrics.h  wrapper-without-version-h.h
rust/mxl-sys/src/: lib.rs
rust/mxl/examples/: fabrics-demo.rs  fabrics.rs
rust/mxl/src/: api.rs  config.rs  error.rs  instance.rs  lib.rs
rust/mxl/src/fabrics/: config.rs  instance.rs  mod.rs  provider.rs  region.rs  target_info.rs
rust/mxl/src/fabrics/initiator/: config.rs  grain.rs  mod.rs  samples.rs
rust/mxl/src/flow/: reader.rs  writer.rs
rust/mxl/src/grain/: data.rs  reader.rs  write_access.rs  writer.rs
rust/mxl/tests/: basic_tests.rs
tools/: CMakeLists.txt
tools/mxl-fabrics-demo/: CMakeLists.txt  demo.cpp
tools/mxl-gst/: CMakeLists.txt  audiosink.cpp  looping_filesrc.cpp  sink.cpp  testsrc.cpp  videosink.cpp  videotestsrc.cpp
tools/mxl-info/: CMakeLists.txt  main.cpp
